--- a/templates/generator/password.html
+++ b/templates/generator/password.html
@@ -2,11 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta charset="UTF-8">
+    {% load bootstrap4 %}
+    <script src="{% bootstrap_jquery_url %}"></script>
+    {% bootstrap_javascript %}
+    {% bootstrap_css %}
     <title>Title</title>
+
 </head>
 <body>
+<div class="container text-center" >
 <h1>This is Password Page</h1>
 <h2>Your`s password is:</h2>
-<h2>   {{ password }}</h2>
+<h2 class="alert alert-success">   {{ password }}</h2>
+</div>
 </body>
 </html>
